# velma_head

./: .gitmodules  CMakeLists.txt  cmake_install.cmake  manifest.xml
launch/: action_server.launch
src/: point_frame.cpp
velma_head_action/: .gitignore  CMakeLists.txt  manifest.xml
velma_head_action/launch/: action_server.launch
velma_head_action/src/: head_action_server.cpp  point_frame.cpp  point_head.cpp
velma_head_controller/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
velma_head_controller/src/: head_controller.cpp  keyboard_ctrl.cpp  psdefs.h  velocityprofile_spline.cpp  velocityprofile_spline.hpp
velma_head_imu/: CMakeLists.txt  mainpage.dox  manifest.xml
velma_head_imu/launch/: head_imu.launch
velma_head_imu/src/: head_imu.cpp  impconst.h  imu.cpp  imu.hpp
velma_head_model/: manifest.xml
velma_head_model/launch/: upload_head_model.launch
velma_head_model/model/: velma_head.urdf.xml
